[gd_scene load_steps=3 format=3 uid="uid://cqvhh7tqvv0fk"]

[ext_resource type="PackedScene" uid="uid://ciu3m3pjck4yl" path="res://scen/Menu/Settings/saund/sound_controller.tscn" id="1_4eca2"]
[ext_resource type="Script" path="res://scripts/menu_script/settings_script/Sound_script/sound_ponel.gd" id="1_sn5q0"]

[node name="Sound_ponel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sn5q0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Sound_controller" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_4eca2")]
layout_mode = 2
size_flags_vertical = 0
text = "Общая громкасть"
value = 50
type_slider = "Master"

[node name="Sound_controller3" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_4eca2")]
layout_mode = 2
size_flags_vertical = 0
text = "Музыка"
value = 50
type_slider = "Music"
bus_index = 1

[node name="Sound_controller2" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_4eca2")]
layout_mode = 2
size_flags_vertical = 0
text = "Ефекты"
value = 50
type_slider = "Sfx"
bus_index = 2
